# client/openapi.json
@@ -67,6 +67,103 @@
         "tags": ["minPoker"]
       }
     },
+    "/minpoker/games/{id}": {
+      "delete": {
+        "operationId": "deleteMinPokerGame",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "description": "UUID of resource",
+            "schema": {
+              "example": "550e8400-e29b-41d4-a716-446655440000",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Deleted"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "summary": "",
+        "tags": ["minPoker"]
+      }
+    },
+    "/minfactory/users/me": {
+      "get": {
+        "operationId": "getMinFactoryUserMe",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MinFactoryUserDto"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "summary": "",
+        "tags": ["minFactory"]
+      }
+    },
+    "/minfactory/users": {
+      "post": {
+        "operationId": "createMinFactoryUser",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MinFactoryUserDto"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "409": {
+            "description": "Conflict"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "summary": "",
+        "tags": ["minFactory"]
+      }
+    },
     "/minrps/games/{id}": {
       "delete": {
         "operationId": "deleteMinRpsGame",
@@ -234,64 +331,6 @@
         "summary": "",
         "tags": ["minRPS"]
       }
-    },
-    "/minfactory/users/me": {
-      "get": {
-        "operationId": "getMinFactoryUserMe",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/MinFactoryUserDto"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "summary": "",
-        "tags": ["minFactory"]
-      }
-    },
-    "/minfactory/users": {
-      "post": {
-        "operationId": "createMinFactoryUser",
-        "parameters": [],
-        "responses": {
-          "201": {
-            "description": "Created",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/MinFactoryUserDto"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "409": {
-            "description": "Conflict"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "summary": "",
-        "tags": ["minFactory"]
-      }
     }
   },
   "info": {
@@ -370,6 +409,21 @@
           }
         },
         "required": ["name"]
+      },
+      "MinFactoryUserDto": {
+        "type": "object",
+        "properties": {
+          "createdAt": {
+            "format": "date-time",
+            "type": "string",
+            "example": "2025-10-21T18:45:30.000Z"
+          },
+          "email": {
+            "type": "string",
+            "example": "user@example.com"
+          }
+        },
+        "required": ["createdAt", "email"]
       },
       "MinRpsGameDto": {
         "type": "object",
@@ -467,21 +521,6 @@
           }
         },
         "required": ["player1Move", "player2Move", "result"]
-      },
-      "MinFactoryUserDto": {
-        "type": "object",
-        "properties": {
-          "createdAt": {
-            "format": "date-time",
-            "type": "string",
-            "example": "2025-10-21T18:45:30.000Z"
-          },
-          "email": {
-            "type": "string",
-            "example": "user@example.com"
-          }
-        },
-        "required": ["createdAt", "email"]
       }
     }
   }
