# server/src/features/minpoker/controllers/minpoker-game.controller.ts
@@ -1,4 +1,4 @@
-import { Body, Controller, Get, HttpCode, Post, UseGuards } from '@nestjs/common';
+import { Body, Controller, Delete, Get, HttpCode, Param, ParseUUIDPipe, Post, UseGuards } from '@nestjs/common';
 import { ApiOperation, ApiTags } from '@nestjs/swagger';
 import { MinPokerCreateGameDto } from '../models/dtos/minpoker-create-game.dto';
 import { MinPokerGameDto } from '../models/dtos/minpoker-game.dto';
@@ -8,15 +8,37 @@ import { AuthenticationGuard } from 'src/core/authentication/guards/authenticati
 import type { FirebaseUserDto } from 'src/core/authentication/models/firebase-user.dto';
 import { API_200 } from 'src/shared/decorators/api-200.decorator';
 import { API_201 } from 'src/shared/decorators/api-201.decorator';
+import { API_204 } from 'src/shared/decorators/api-204.decorator';
 import { API_400 } from 'src/shared/decorators/api-400.decorator';
 import { API_401 } from 'src/shared/decorators/api-401.decorator';
+import { API_403 } from 'src/shared/decorators/api-403.decorator';
+import { API_404 } from 'src/shared/decorators/api-404.decorator';
 import { API_500 } from 'src/shared/decorators/api-500.decorator';
+import { API_Param_ID } from 'src/shared/decorators/api-param-id.decorator';
 import { MinApp } from 'src/shared/enums/minapp.enum';
 
 @Controller('minpoker/games')
 @ApiTags(MinApp.MinPoker)
 export class MinPokerGameController {
   constructor(private readonly gameService: MinPokerGameService) {}
+
+  @Delete(':id')
+  @HttpCode(204)
+  @UseGuards(AuthenticationGuard)
+  @ApiOperation({ operationId: 'deleteMinPokerGame' })
+  @API_Param_ID()
+  @API_204()
+  @API_400()
+  @API_401()
+  @API_403()
+  @API_404()
+  @API_500()
+  public async delete(
+    @Param('id', new ParseUUIDPipe()) id: string,
+    @FirebaseUser() firebaseUser: FirebaseUserDto,
+  ): Promise<void> {
+    await this.gameService.deleteGame(id, firebaseUser);
+  }
 
   @Get()
   @HttpCode(200)
